finally beat it ! :). Note for later : don't do eclipse bigs renaming when svn offline.
git-svn-id: https://svn.apache.org/repos/asf/incubator/stanbol/branches/cameltrial@1351537 13f79535-47bb-0310-9956-ffa450edef68